@@ -9,6 +9,9 @@ $Source$
     * error.php, libraries/common.lib.php, libraries/sanitizing.lib.php:
       Protect against possible XSS (bug #1265740), move input sanitizing to
       special file.
+    * config.inc.php, libraries/common.lib.php,
+      libraries/config_import.lib.php, libraries/display_export.lib.php:
+      Default charset for export is now configurable (RFE #1263772).
 
 2005-08-20 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/common.lib.php, new error.php: patch #1258978, move common
